<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    android:gravity="center"
    tools:context="com.tigran.android.kotlintest.MainActivity">

    <TextView
        android:id="@+id/hello_from_alex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_16"
        android:text="@string/hello_from_alex"
        android:textAlignment="center"
        android:textColor="@color/default_color_text"
        android:textSize="@dimen/text_size_28"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/change_text_kotlin_button"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_right_8"
                android:text="@string/press_kotlin" />

            <Button
                android:id="@+id/change_text_alex_button"
                style="@style/button_style"
                android:text="@string/press_alex" />
        </LinearLayout>

        <Button
            android:id="@+id/change_text_color"
            style="@style/button_style"
            android:text="@string/change_text_color" />

        <Button
            android:id="@+id/default_text_color"
            style="@style/button_style"
            android:text="@string/default_text_color" />

    </LinearLayout>
</LinearLayout>
